examples/errors/error_method_call_wrong_args.cay
// Error测试：方法调用参数错误
public class TestMethodCallWrongArgs {
    public static int add(int a, int b) {
        return a + b;
    }
    
    public static void main() {
        int result = add(1, 2, 3);
        println(result);
    }
}
